# llama.rn

./: README.md  package-lock.json  package.json
android/src/main/: jni.cpp
android/src/main/java/com/rnllama/: LlamaContext.java
cpp/: chat.cpp  common.cpp  common.h  ggml-backend-reg.cpp  ggml-metal.m  ggml-quants.c  ggml.c  ggml.h  llama-mmap.cpp  llama-model.cpp  llama-vocab.cpp  llama.cpp  rn-completion.cpp  rn-completion.h  rn-kv-checkpoint.hpp  rn-llama.cpp  rn-llama.h
cpp/jsi/: JSISession.h  JSIUtils.cpp  RNLlamaJSI.cpp
cpp/tools/mtmd/: clip.cpp
example/src/screens/: MTPSpeculativeScreen.tsx  ParallelDecodingScreen.tsx
ios/: CMakeLists.txt  RNLlamaContext.mm
scripts/: bootstrap.sh  sync-llama-cpp-submodule.sh
scripts/patches/: chat-template.hpp.patch  chat.cpp.patch  common.cpp.patch  common.h.patch  ggml-metal.m.patch  llama-mmap.cpp.patch  log.cpp.patch
src/: NativeRNLlama.ts  types.ts  version.ts
tests/: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  build_and_test.sh  download-models.sh  eval_scenarios_test.cpp  reuse_test.cpp  run-android.sh  run-local.sh  run_tests.sh  swa_cache_corruption_test.cpp  test-helpers.hpp
tests/models/: .gitignore
tests/results-android/: cpu-2511FPC34G-4LJRSCBARCQO4PMB.txt  cpu-ONEPLUS_A6003-ba5702bf.txt  cpu-Pixel_9-45300DLAQ004DH.txt  cpu-Qwen_Qwen3.5-2B-Q4_0-25102PCBEG-df8fc5ef.txt  cpu-Qwen_Qwen3.5-2B-Q4_0-2511FPC34G-4LJRSCBARCQO4PMB.txt  cpu-SM-S911B-R3CWC02QBNX.txt  cpu-mamba-130m-22126RN91Y-c6lnyxfeif75bqz5.txt  cpu-mamba-130m-25102PCBEG-df8fc5ef.txt  opencl-22126RN91Y-c6lnyxfeif75bqz5.txt  opencl-2511FPC34G-4LJRSCBARCQO4PMB.txt  opencl-SM-S911B-R3CWC02QBNX.txt  opencl-mamba-130m-25102PCBEG-df8fc5ef.txt  opencl-mamba-130m-Pixel_9-45300DLAQ004DH.txt
